added support for extrapermissions file to allow users to gain access to other modules, and FindLearningContexts app to find the ID(s)